# beam-grouping

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
beam_grouping/: __init__.py  beam_pipeline.py  test_beam_pipeline.py
beam_grouping/pipeline_dataclasses/: __init__.py  enums.py  exception_element.py  input_element.py
beam_grouping/transformers/: __init__.py  extract_element.py
data/: messages.jsonl
src/: beam_pipeline.py  test_beam_pipeline.py  test_pipeline_grouping.py
src/util/: pubsub_publisher.py
test/transformers/: test_extract_element.py
util/: publisher.py  pubsub_publisher.py  setup_emulator.py
