[tool.poetry]
name = "beam-grouping"
version = "0.1.0"
description = ""
authors = ["Mathew Savage <mathew@mathewsavage.com>"]

[tool.poetry.dependencies]
python = "3.12.10"
apache-beam = {extras = ["gcp", "test"], version = "^2.46.0"}
google-cloud = "^0.34.0"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
